# qt_dir_view

./: CMakeLists.txt  README.md  main.cpp
